log

Thu 17 Aug 2023 08:00:54 PM UTC: 
 tests:  0|7
total_score: 0/70
b42eaed
Thu 17 Aug 2023 08:01:52 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:17: error: invalid initializer
   14 |     int max[] = arr[0];
      |                 ^~~
exercises.c:17:20: error: comparison between pointer and integer [-Werror]
   17 |         if (arr[i] < max) {
      |                    ^
exercises.c:18:18: error: assignment to expression with array type
   18 |              max = arr[i];
      |                  ^
exercises.c:21:12: error: returning ‘int *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Werror=int-conversion]
   21 |     return max;
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
76a8449
Thu 17 Aug 2023 08:02:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:18: error: invalid initializer
   14 |     int max[0] = arr[0];
      |                  ^~~
exercises.c:17:20: error: comparison between pointer and integer [-Werror]
   17 |         if (arr[i] < max) {
      |                    ^
exercises.c:18:18: error: assignment to expression with array type
   18 |              max = arr[i];
      |                  ^
exercises.c:21:12: error: returning ‘int *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Werror=int-conversion]
   21 |     return max;
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
23425de
Thu 17 Aug 2023 08:03:23 PM UTC: 
 exercises.c | 25 +++++++++++++------------
 1 file changed, 13 insertions(+), 12 deletions(-)
 tests:  0|6
total_score: 10/70
8235420
Thu 17 Aug 2023 08:03:49 PM UTC: 
 exercises.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
0edc01a
Thu 17 Aug 2023 08:04:59 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
be2938f
Thu 17 Aug 2023 08:08:03 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|5
total_score: 20/70
5223d65
Thu 17 Aug 2023 08:08:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
fe53a81
Thu 17 Aug 2023 08:08:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
f41265b
Thu 17 Aug 2023 08:09:11 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:19: error: expected expression before ‘]’ token
   14 |     int max = arr[];
      |                   ^
Compilation failed
5aa7e21
Thu 17 Aug 2023 08:09:29 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:17: error: invalid initializer
   14 |     int max[] = arr[0];
      |                 ^~~
exercises.c:17:20: error: comparison between pointer and integer [-Werror]
   17 |         if (arr[i] < max) {
      |                    ^
exercises.c:18:18: error: expected expression before ‘]’ token
   18 |              max[] = arr[i];
      |                  ^
exercises.c:21:16: error: expected expression before ‘]’ token
   21 |     return max[];
      |                ^
exercises.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
88d9bde
Thu 17 Aug 2023 08:12:16 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|4
total_score: 30/70
e9317f9
Thu 17 Aug 2023 08:19:08 PM UTC: 
 exercises.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
 tests:  0|4
total_score: 30/70
9d777c5
Thu 17 Aug 2023 08:30:09 PM UTC: 
 exercises.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
In file included from test.c:1:
exercises.c:113:1: error: expected identifier or ‘(’ before ‘}’ token
  113 | }
      | ^
Compilation failed
fc803c8
Thu 17 Aug 2023 08:30:30 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|3
total_score: 40/70
c769b1f
Thu 17 Aug 2023 08:40:33 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
9eb62d0
Thu 17 Aug 2023 08:49:39 PM UTC: 
 exercises.c | 22 +++++++++++++---------
 1 file changed, 13 insertions(+), 9 deletions(-)
 tests:  0|2
total_score: 50/70
6c0a9e0
Thu 17 Aug 2023 08:52:42 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|1
total_score: 60/70
f14c570
Thu 17 Aug 2023 08:53:41 PM UTC: 
 exercises.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  0|1
total_score: 60/70
97dc740
Fri 18 Aug 2023 10:11:17 PM UTC: 
 exercises.c | 27 +++++++++++++++++++++++++--
 1 file changed, 25 insertions(+), 2 deletions(-)
 tests:  0|0
total_score: 70/70
2c7cd6b
